refactor: 重命名项目为 web-vue
- 修改了 README.md 中的项目名称
- 更新了 package.json 中的 productName

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "build": {
     "appId": "com.vue3.project.launcher",
-    "productName": "Vue3 Project Launcher",
+    "productName": "web-vue",
     "directories": {
       "output": "dist"
     },
