重构：删除 main.js 和 package-lock.json，更新项目名称及配置
- 删除 main.js 文件，移除主窗口创建逻辑
- 删除 package-lock.json 文件
- 更新 package.json 中的项目名称为 vue-exe，修改主入口文件为 index.js
- 更新 .gitignore，添加 app 和 app-ssr 目录
- 修改 README.md，更新项目描述和使用说明

--- a/package.json
+++ b/package.json
@@ -1,49 +1,44 @@
 {
-  "name": "web-vue",
+  "name": "vue-exe",
   "version": "1.0.0",
-  "description": "A desktop application to launch Vue3+TS+Vite projects",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "electron-builder"
   },
   "build": {
-    "appId": "com.vue3.project.launcher",
-    "productName": "web-vue",
+    "appId": "com.vue.exe",
+    "productName": "vue-exe",
     "directories": {
-      "output": "dist"
+      "output": "app"
     },
     "win": {
       "target": [
-        "nsis"
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
       ],
       "icon": "build/icon.ico"
     },
-    "extraFiles": [
-      {
-        "from": ".",
-        "to": "resources/app",
-        "filter": [
-          "app/**/*"
-        ]
-      }
-    ]
+    "nsis": {
+      "oneClick": false,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "runAfterFinish": true,
+      "perMachine": true
+    }
   },
-  "keywords": [
-    "electron",
-    "vue3",
-    "vite",
-    "typescript"
-  ],
-  "author": "",
+  "author": "zhouzhijun",
   "license": "ISC",
-  "dependencies": {
-    "find-process": "^1.4.7"
-  },
+  "description": "",
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "electron-builder": "^24.12.0",
-    "electron": "^29.1.0"
+    "electron": "^36.2.0",
+    "electron-builder": "^26.0.12"
   }
 }
